syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.utad.server";
option java_outer_classname = "ServerProto";
option objc_class_prefix = "SRT";

package gRPCProto;

// Interface exported by the server.
service Login {
	/*
	Returns a connected User with a random Key
	if the id is -1 the email or password fields are wrong
	*/

	rpc CheckLogin(UserLogin) returns (UserConnected){}
}

service Register {

	/**/
	rpc RegisterUser(UserRegister) returns (UserConnected) {}
	rpc RegisterManager(ManagerRegister) returns (UserConnected) {}
	rpc RegisterAdmin(AdminRegister) returns (UserConnected) {}
}

message UserLogin {
	string email = 1;
	string password = 2;
}

message UserConnected {
	int32 id = 1;
	string type = 2;
}

message UserRegister {
	int32 id = 1;
	string name = 2;
	string email = 3;
	string password = 4;
	int32 idLocalization = 5;
}

message ManagerRegister {
	int32 id = 1;
	string name = 2;
	string email = 3;
	string password = 4;
	int32 idLocalization = 5;
}

message AdminRegister {
	int32 id = 1;
	string name = 2;
	string email = 3;
	string password = 4;
	int32 idLocalization = 5;
}